--- a/project1.html
+++ b/project1.html
@@ -59,7 +59,7 @@
         <div class="jumbotron">
             <h1 class="display-4">Current Time is: <span id="time"></span></h1>
             <hr class="my-4">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            //<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
           </div>
       </div>
 
